# OOP_MAI

./: .gitignore
lab_1/: .gitignore  CMakeLists.txt  README.md
lab_1/include/: hearOfNum.h
lab_1/src/: hearOfNum.cpp  main.cpp
lab_1/tests/: tests.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/include/: HexArray.h
lab_2/src/: HexArray.cpp  main.cpp
lab_2/tests/: CMakeLists.txt  test.cpp
lab_3/: CMakeLists.txt  README.md
lab_3/include/: point.h  rectangle.h  shape.h  square.h  trapezoid.h
lab_3/src/: main.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
lab_3/tests/: CMakeLists.txt  main.cpp  pointTest.cpp  rectangleTest.cpp  squareTest.cpp  trapezoidTest.cpp
lab_4/: CMakeLists.txt  README.md
lab_4/include/: array.hpp  point.hpp  rectangle.hpp  shape.hpp  square.hpp  trapezoid.hpp
lab_4/src/: main.cpp
lab_4/tests/: CMakeLists.txt  pointTest.cpp  rectangleTest.cpp  squareTest.cpp  trapezoidTest.cpp
lab_5/: CMakeLists.txt
lab_5/include/: allocator.hpp  stack.hpp
lab_5/src/: main.cpp
lab_5/tests/: CMakeLists.txt  main.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/include/: battle.h  dragon.h  dragon.hpp  elf.h  elf.hpp  factory.h  factory.hpp  knight.h  knight.hpp  npc.h  npc.hpp  observer.h  observer.hpp  save_load.hpp
lab_6/src/: battle.cpp  dragon.cpp  elf.cpp  factory.cpp  knight.cpp  main.cpp  npc.cpp  observer.cpp  save_load.cpp
lab_6/test/: test.cpp
lab_6/tests/: tests.cpp
lab_7/: CMakeLists.txt  main.cpp  test1.cpp
lab_7/include/: declaration.h  dragon.h  elf.h  factory.h  fight.h  knight.h  npc.h
lab_7/src/: dragon.cpp  elf.cpp  factory.cpp  fight.cpp  knight.cpp  main.cpp  npc.cpp  observerConsole.cpp  observerFile.cpp
